--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-react": "^4.2.1",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
+        "sass": "^1.77.0",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "normalize.css": "^8.0.1",
+        "swiper": "^11.1.1"
     }
 }
