--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.6.4",
     "laravel-vite-plugin": "^1.0.0",
-    "sass": "^1.77.0",
-    "vite": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "socket.io-client": "^4.7.5"
+    "sass": "^1.77.0",
+    "socket.io-client": "^2.4.0",
+    "vite": "^5.0.0"
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
