--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
-    "swiper": "^11.1.1"
+    "swiper": "^11.1.1",
+    "use-sound": "^4.0.1"
   }
 }
